--- a/app/src/main/res/layout/fragment_yeni_urun.xml
+++ b/app/src/main/res/layout/fragment_yeni_urun.xml
@@ -25,7 +25,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="0.5"
                 android:gravity="center"
-                android:text="ÜRÜN ADI"
+                android:text="ÜRÜN AÇIKLAMA"
                 android:textAlignment="center" />
 
             <EditText
@@ -33,7 +33,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="0.5"
-                android:text="--"
+
                 android:gravity="center"
                 android:textAlignment="center" />
 
@@ -65,7 +65,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="0.5"
                 android:gravity="center"
-                android:text="--"
+
                 android:textAlignment="center" />
 
 
@@ -96,7 +96,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="0.5"
                 android:gravity="center"
-                android:text="--"
+
                 android:textAlignment="center" />
 
 
@@ -126,7 +126,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="0.5"
                 android:gravity="center"
-                android:text="--"
+
                 android:textAlignment="center" />
 
 
@@ -154,46 +154,18 @@
                 android:textAlignment="center" />
 
             <TextView
-                android:id="@+id/tvCreateDate"
+                android:id="@+id/tvCreateDateTx"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="0.5"
                 android:gravity="center"
-                android:text="--"
+
                 android:textAlignment="center" />
 
 
         </LinearLayout>
         <View style="@style/divider" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="65dp"
-            android:background="#ffffff"
-            android:orientation="horizontal"
-            android:padding="10dp"
-            android:weightSum="1">
-
-            <TextView
-                android:id="@+id/urunDesc"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="0.5"
-                android:gravity="center"
-                android:text="AÇIKLAMA"
-                android:textAlignment="center" />
-
-            <EditText
-                android:id="@+id/urunDescEdt"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="0.5"
-                android:gravity="center"
-                android:text="--"
-                android:textAlignment="center" />
-
-
-        </LinearLayout>
 
 
 
@@ -204,7 +176,7 @@
 
 
     <ImageButton
-        android:id="@+id/btAztec"
+        android:id="@+id/btAztecAdd"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:gravity="center"
@@ -212,17 +184,23 @@
         android:textAlignment="center" />
 
 
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/barcodeText"
+        android:layout_width="159dp"
         android:layout_height="50dp"
-        android:layout_weight="1"
-        android:ems="10"
+
         android:inputType="textPersonName"
         android:text="Barkod" />
+    <Button
+        android:id="@+id/btAdd"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="EKLE"
+        />
 
 
 </LinearLayout>
+
 
 </LinearLayout>
 </LinearLayout>
