internal server error dead

--- a/app/src/main/res/layout/fragment_yeni_urun.xml
+++ b/app/src/main/res/layout/fragment_yeni_urun.xml
@@ -117,7 +117,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="0.5"
                 android:gravity="center"
-                android:text="KATEGORİ ADI"
+                android:text="KATEGORİ ID"
                 android:textAlignment="center" />
 
             <EditText
