--- a/app/src/main/res/layout/fragment_tab_personel_bilgileri.xml
+++ b/app/src/main/res/layout/fragment_tab_personel_bilgileri.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:weightSum="1">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,7 +34,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:weightSum="1"
+        android:layout_weight="0.27">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -41,7 +44,8 @@
             android:background="#ffffff"
             android:orientation="horizontal"
             android:padding="10dp"
-            android:weightSum="1">
+            android:weightSum="1"
+            android:layout_weight="0.30">
 
             <TextView
                 android:id="@+id/tvPersonelAdi"
@@ -72,7 +76,8 @@
             android:background="#ffffff"
             android:orientation="horizontal"
             android:padding="10dp"
-            android:weightSum="1">
+            android:weightSum="1"
+            android:layout_weight="0.38">
 
             <TextView
                 android:id="@+id/tvSoyadi"
@@ -103,7 +108,8 @@
             android:background="#ffffff"
             android:orientation="horizontal"
             android:padding="10dp"
-            android:weightSum="1">
+            android:weightSum="1"
+            android:layout_weight="0.21">
 
             <TextView
                 android:id="@+id/tvSube"
