--- a/app/src/main/res/layout/fragment_urun_teslim.xml
+++ b/app/src/main/res/layout/fragment_urun_teslim.xml
@@ -70,7 +70,7 @@
             android:layout_marginTop="10dp">
 
             <EditText
-                android:id="@+id/etLocation"
+                android:id="@+id/etPersonel"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_weight="75"
@@ -78,7 +78,7 @@
                 android:hint="Personel Adı Giriniz" />
 
             <Button
-                android:id="@+id/btLocation"
+                android:id="@+id/btPersonel"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:layout_alignParentRight="true"
@@ -104,12 +104,11 @@
         </android.support.v7.widget.RecyclerView>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="65dp"
+            android:layout_height="wrap_content"
             android:background="#ffffff"
             android:orientation="horizontal"
             android:padding="10dp"
-            android:weightSum="1"
-            android:layout_weight="0.16">
+            android:weightSum="1">
 
             <TextView
                 android:id="@+id/txLocation"
@@ -117,7 +116,8 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="LOKASYON"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                />
 
             <Spinner
                 android:id="@+id/spLocation"
@@ -132,12 +132,12 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="65dp"
+            android:layout_height="24dp"
             android:background="#ffffff"
             android:orientation="horizontal"
             android:padding="10dp"
             android:weightSum="1"
-            android:layout_weight="0.07">
+            android:layout_weight="0.10">
 
             <TextView
                 android:id="@+id/txMiktar"
@@ -160,9 +160,8 @@
         <Button
             android:id="@+id/btTake"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_weight="0.01"
             android:background="#000000"
             android:gravity="center"
             android:text="ATA"
