--- a/app/src/main/res/layout/fragment_urun_teslim.xml
+++ b/app/src/main/res/layout/fragment_urun_teslim.xml
@@ -108,7 +108,8 @@
             android:background="#ffffff"
             android:orientation="horizontal"
             android:padding="10dp"
-            android:weightSum="1">
+            android:weightSum="1"
+            android:layout_weight="0.05">
 
             <TextView
                 android:id="@+id/txLocation"
@@ -137,7 +138,7 @@
             android:orientation="horizontal"
             android:padding="10dp"
             android:weightSum="1"
-            android:layout_weight="0.10">
+            android:layout_weight="0.23">
 
             <TextView
                 android:id="@+id/txMiktar"
